2011-08-19  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* devices.h (fh_devices): Define DEV_MISC_MAJOR, DEV_MEM_MAJOR,
	DEV_SOUND_MAJOR.  Use throughout.
	* fhandler_proc.cc (proc_tab): Add /proc/devices and /proc/misc
	virtual files.
	(format_proc_devices): New function.
	(format_proc_misc): New function.

2011-08-19  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dtable.cc: Mark some const variables as static.
	* environ.cc (conv_start_chars): Move to shared cygwin region and
	initialize at compile time.
	(match_first_char): New generic function for querying conv_start_chars.
	(posify_maybe): Rename from posify.
	(environ_init): Remove conv_envvars initialization.  Don't check
	conv_start_chars, just allow posify_maybe to make the decision.
	* fhandler_console.cc (__vt100_conv): Fix formatting.  Mark as const.

2011-08-19  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::read): Recognize backspace key
	using the device independent key code, rather than the device dependent
	scan code.

2011-08-18  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dcrt0.cc (dll_crt0_0): Remove unneeded __stdcall decoration.
	* init.cc: Reflect change to dll_crt0_0 in declaration.

2011-08-18  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::get_debugger_info): Add missing braces.
	(dtable::stdio_init): Fix incorrect negation of not_open(2) condition.

2011-08-16  Pierre Humblet <Pierre.Humblet@ieee.org>

	* net.cc (gethostby_helper): Remove DEBUGGING code from and
	streamline the second pass.

2011-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* dlfcn.cc (dlopen): Reimplement RTLD_NODELETE for Windows 2000 using
	internal datastructures.  Explain the code.
	* ntdll.h (struct _LDR_DATA_TABLE_ENTRY): Define.
	(struct _PEB_LDR_DATA): Define.
	(struct _PEB): Change PVOID LoaderData to PPEB_LDR_DATA Ldr.

	* fhandler_process.cc (format_process_maps): Call NtQueryVirtualMemory
	with valid return length pointer.  Explain why.
